<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.simplyrin.panda</groupId>
  <artifactId>PandaEntus</artifactId>
  <version>1.3</version>
  <packaging>jar</packaging>

  <name>PandaEntus</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>16</maven.compiler.source>
    <maven.compiler.target>16</maven.compiler.target>
    <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
    <version.template.file>src/main/template/Version.java</version.template.file>
    <version.file>src/main/java/net/simplyrin/pandaentus/utils/Version.java</version.file>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>16</source>
          <target>16</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <id>timestamp-property</id>
            <goals>
              <goal>timestamp-property</goal>
            </goals>
            <configuration>
              <name>build.time</name>
              <pattern>yyyy-MM-dd HH:mm:ss</pattern>
              <locale>ja_JP</locale>
              <timeZone>Asia/Tokyo</timeZone>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <archive>
            <manifestEntries>
              <Build-Timestamp>${build.time}</Build-Timestamp>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
          <systemPropertyVariables>
            <user.timezone>Asia/Tokyo</user.timezone>
          </systemPropertyVariables>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.google.code.maven-replacer-plugin</groupId>
        <artifactId>maven-replacer-plugin</artifactId>
        <version>1.4.1</version>
        <executions>
          <execution>
            <phase>process-sources</phase>
            <goals>
              <goal>replace</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <file>${version.template.file}</file>
          <outputFile>${version.file}</outputFile>
          <replacements>
            <replacement>
              <token>@buildnumber@</token>
              <value>${svn.revision}</value>
            </replacement>
            <replacement>
              <token>@buildtime@</token>
              <value>${build.time}</value>
            </replacement>
            <replacement>
              <token>@pomversion@</token>
              <value>${project.version}</value>
            </replacement>
          </replacements>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <archive>
            <manifest>
              <mainClass>net.simplyrin.pandaentus.Main</mainClass>
            </manifest>
          </archive>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jcenter</id>
      <name>jcenter-bintray</name>
      <url>https://jcenter.bintray.com</url>
    </repository>
    <repository>
      <id>net.simplyrin</id>
      <name>api</name>
      <url>https://api.simplyrin.net/maven/</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>dv8tion</id>
      <name>m2-dv8tion</name>
      <url>https://m2.dv8tion.net/releases</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.22</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.jooq</groupId>
      <artifactId>joor</artifactId>
      <version>0.9.13</version>
    </dependency>
    <dependency>
      <groupId>net.simplyrin.rinstream</groupId>
      <artifactId>RinStream</artifactId>
      <version>1.4-java16</version>
    </dependency>
    <dependency>
      <groupId>net.simplyrin.processmanager</groupId>
      <artifactId>ProcessManager</artifactId>
      <version>1.1</version>
    </dependency>
    <dependency>
      <groupId>net.simplyrin.config</groupId>
      <artifactId>Config</artifactId>
      <version>1.2</version>
    </dependency>
    <dependency>
      <groupId>net.simplyrin.httpclient</groupId>
      <artifactId>HttpClient</artifactId>
      <version>1.2</version>
    </dependency>
    <dependency>
      <groupId>net.dv8tion</groupId>
      <artifactId>JDA</artifactId>
      <version>4.2.0_221</version>
    </dependency>
    <dependency>
      <groupId>com.sedmelluq</groupId>
      <artifactId>lavaplayer</artifactId>
      <version>1.3.77</version>
    </dependency>
    <dependency>
      <groupId>com.github.marcoacierno</groupId>
      <artifactId>pastebin-java-api</artifactId>
      <version>0.2.1</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.maven-replacer-plugin</groupId>
      <artifactId>replacer</artifactId>
      <version>1.5.3</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.9</version>
    </dependency>
    <dependency>
      <groupId>com.github.markozajc</groupId>
      <artifactId>akiwrapper</artifactId>
      <version>1.5.1.1</version>
    </dependency>
    <dependency>
      <groupId>am.ik.voicetext</groupId>
      <artifactId>voicetext4j</artifactId>
      <version>1.0.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>31.0.1-jre</version>
    </dependency>
  </dependencies>
</project>
